Archive2/13/04edad22284613/output
main.cpp:7:1: error: expected expression
template<class T> using raw_ptr = T*; 
^
main.cpp:8:1: error: use of undeclared identifier 'raw_ptr'
raw_ptr<int> x;
^
main.cpp:8:12: error: expected '(' for function-style cast or type construction
raw_ptr<int> x;
        ~~~^
main.cpp:8:14: error: use of undeclared identifier 'x'
raw_ptr<int> x;
             ^
4 errors generated.
