Archive2/13/04edad22284613/main.cpp
#include <iostream>
#include <string>
#include <vector>

int main()
{
template<class T> using raw_ptr = T*; 
raw_ptr<int> x;
}
